add background image to second project

--- a/index.css
+++ b/index.css
@@ -32,3 +32,7 @@ body{
     background-image: url(/img/camera2.jpeg);
     color: white;
 }
+.card2{
+    background-image: url(/img/food2.jpeg);
+    color: white;
+}
