--- a/index.css
+++ b/index.css
@@ -33,15 +33,15 @@ body{
     background-size: cover;
 }
 .card1{
-    background-image: url(/img/camera2.jpeg);
+    background-image: url(./img/camera2.jpeg);
     color: white;
 }
 .card2{
-    background-image: url(/img/food2.jpeg);
+    background-image: url(./img/food2.jpeg);
     color: white;
 }
 .about{
-    background-image: url(/img/bg5.jpg);
+    background-image: url(./img/bg5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
